--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
       <div class="row mb-4">
         <div class="col-1 frete text-end">
-          <img src="/Imagens/icones/caminhao-superior.png" alt="Caminhao">
+          <img src="Imagens/icones/caminhao-superior.png" alt="Caminhao">
         </div>
         <div class="col-5 col-md-3 col-sm-5 mt-1 frete">
           <span>Frete para todo o Brasil</span>
@@ -155,13 +155,13 @@
         <div class="order-2 order-md-1 col-6 col-sm-4 mt-negativo position-ab">
           <div class="input-group mt-5">
             <input type="text" class="form-control" placeholder="   Busca..." aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary border-radius-proprio" type="button" id="button-addon2"><img class="pb-1 lupa" src="/Imagens/icones/Lupa.png" alt="Lupa"></button>
+            <button class="btn btn-outline-secondary border-radius-proprio" type="button" id="button-addon2"><img class="pb-1 lupa" src="Imagens/icones/Lupa.png" alt="Lupa"></button>
           </div>
         </div>
         <div class="order-1 col-3 col-lg-2 text-center">
           <div>
             <a href="#">
-              <img class="width-100" src="/Imagens/Logo.png" alt="Logo">
+              <img class="width-100" src="Imagens/Logo.png" alt="Logo">
             </a>
           </div>
         </div>
@@ -235,13 +235,13 @@
         <div class="row justify-content-between">
           <div class="autoplay">
             <div class="col-md-4 mb-5  banner-insta m-2">
-              <a href="https://www.instagram.com/beatriz_pedraslapidadas/" target="_blank"> <img class="w-100" src="/Imagens/Banner-insta2.png" alt="Instagram"></a>
+              <a href="https://www.instagram.com/beatriz_pedraslapidadas/" target="_blank"> <img class="w-100" src="Imagens/Banner-insta2.png" alt="Instagram"></a>
             </div>
             <div class="col-md-4 mb-5 text-center banner-youtube m-2">
-              <a href="https://www.youtube.com/channel/UCu7jTtDsViugHih0ZDeVlnA" target="_blank"><img class="w-100" src="/Imagens/banner-youtube.png" alt="Youtube"></a>
+              <a href="https://www.youtube.com/channel/UCu7jTtDsViugHih0ZDeVlnA" target="_blank"><img class="w-100" src="Imagens/banner-youtube.png" alt="Youtube"></a>
             </div>
             <div class="col-md-4 mb-5 text-end banner-tiktok m-2">
-              <a href="https://www.tiktok.com/@gilbertogilgarimpo?lang=pt-BR" target="_blank"><img class="w-100" src="/Imagens/Banner-tiktok.png" alt="TikTok"></a>
+              <a href="https://www.tiktok.com/@gilbertogilgarimpo?lang=pt-BR" target="_blank"><img class="w-100" src="Imagens/Banner-tiktok.png" alt="TikTok"></a>
             </div>
           </div>
         </div>
@@ -422,7 +422,7 @@
       <div class="row">
         <div class="col-md-1 text-md-end text-center col-12">
           <div>
-            <img src="/Imagens/icones/caminhao-inferior.png" alt="caminhao">
+            <img src="Imagens/icones/caminhao-inferior.png" alt="caminhao">
           </div>
         </div>
         <div class="col-12 col-md-3 text-center text-md-start">
@@ -431,7 +431,7 @@
         </div>
         <div class="col-md-1 text-md-end text-center col-12">
           <div>
-            <img src="/Imagens/icones/cartao.png" alt="caminhao">
+            <img src="Imagens/icones/cartao.png" alt="caminhao">
           </div>
         </div>
         <div class="col-12 col-md-3 text-center text-md-start">
@@ -440,7 +440,7 @@
         </div>
         <div class="col-md-1 text-md-end text-center col-12">
           <div>
-            <img src="/Imagens/icones/escudo.png" alt="caminhao">
+            <img src="Imagens/icones/escudo.png" alt="caminhao">
           </div>
         </div>
         <div class="col-12 col-md-3 text-center text-md-start">
@@ -560,8 +560,8 @@
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="/js/origamid-menu.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="js/origamid-menu.js"></script>
+  <script src="js/main.js"></script>
   <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
